--- a/src/app/global.css
+++ b/src/app/global.css
@@ -19,6 +19,10 @@
   }
 }
 
+.font-josefin-sans{
+  font-family: var(--font-josefin-sans);
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
